crates/vizia_core/resources/themes/default_layout.css
/* ... */
.rtl popup scrollview scrollbar.vertical {
    left: 2px;
    right: 1s;
}

popup scrollview {
    width: 1s;
    min-width: auto;
}

popup list list-item {
    width: 1s;
    min-width: auto;
    height: 32px;
    padding-left: 6px;
    padding-right: 6px;
    alignment: left;
    gap: 4px;
    layout-type: row;
}

dropdown vstack,
combobox vstack {
    padding: auto;
}

/* ICON */

svg {
    size: auto;
}

/* IMAGE */

image {
    size: auto;
}

/* KNOB */

knob {
    size: 32px;
    corner-radius: 50%;
}

.knob-track {
    width: 1s;
    height: 1s;
}

.knob-head {
    width: 1s;
    height: 1s;
    layout-type: row;
    top: 2px;
    left: 2px;
    right: 2px;
    bottom: 2px;
    corner-radius: 50%;
    alignment: top-center;
}

.knob-tick {
    width: 2px;
    height: 8px;
}

/* LABEL */

label {
    size: auto;
    direction: auto;
}

/* LIST */

list {
    size: 1s;
}

list.horizontal {
    height: auto;
}

list.horizontal scrollview {
    height: auto;
}

list.horizontal scroll-content {
    layout-type: row;
    height: auto;
}

list list-item {
    min-width: auto;
    width: 1s;
    height: 30px;
    min-height: auto;
    alignment: left;
}

/* MENU */

menubar {
    size: auto;
}

menubutton {
    height: 32px;
    width: 1s;
    min-width: auto;
    padding-left: 8px;
    padding-right: 8px;
    alignment: left;
    gap: 8px;
}

menubutton > hstack,
submenu > hstack {
    height: auto;
    min-width: auto;
    alignment: left;
    gap: 8px;
}

submenu {
    height: 32px;
    width: 1s;
    min-width: auto;
    padding-left: 8px;
    /* padding-right: 8px; */
    alignment: left;
    gap: 1s;
    min-gap: 12px;
}

submenu submenu,
dropdown > popup > submenu {
    width: 1s;
}

submenu .icon,
menubutton .icon {
    size: 20px;
}

menubutton .shortcut {
    left: 1s;
}

/* submenu submenu label,
dropdown > popup > submenu label {
    alignment: center;
    size: 1s;
    width: 1s;
} */

submenu > popup {
    height: auto;
    width: auto;
    min-width: auto;
    padding: 8px;
}

submenu submenu > popup,
menubar submenu > popup {
    opacity: 0;
    display: none;
}

submenu submenu > popup:checked,
menubar submenu > popup:checked {
    opacity: 1;
    display: flex;
}

submenu submenu > popup,
menubar submenu > popup {
    top: 0px;
    left: 100%;
}

menubar > submenu {
    width: auto;
    padding-left: 12px;
    padding-right: 12px;
}

submenu > .arrow {
    display: none;
}

submenu submenu > .arrow,
menu submenu > .arrow {
    display: flex;
}

submenu > .arrow {
    size: 20px;
    left: 1s;
    right: 4px;
}

submenu divider {
    padding-top: 4px;
    padding-bottom: 4px;
}

/* PICKLIST */

select {
    width: auto;
    height: 32px;
    min-width: 64px;
}

select popup {
    max-height: 200px;
}

/* POPUP */

popup {
    size: auto;
    z-index: 100;
}

/* PROGRESS BAR */

progressbar {
    height: 12px;
    width: 1s;
}

/* RADIOBUTTON */

radiobutton {
    size: 16px;
    alignment: center;
}

radiobutton .inner {
    size: 8px;
}

/* RATING */

rating {
    size: auto;
    layout-type: row;
}

/* RESIZABLE */
resizable > resize-handle {
    opacity: 0;
    width: 4px;
    height: 1s;
    left: 1s;
    top: 0px;
    translate: 50% 0%;
    cursor: ew-resize;
}

resizable.left > resize-handle {
    left: 0px;
    translate: -50% 0%;
}

resizable.horizontal > resize-handle {
    width: 1s;
    height: 4px;
    top: 1s;
    left: 0px;
    translate: 0% 50%;
    cursor: ns-resize;
}

resizable.top > resize-handle {
    top: 0px;
    translate: 0% -50%;
}

resizable:active > resize-handle,
resizable > resize-handle:hover {
    opacity: 1;
}

/* SCROLLVIEW */

scrollview {
    overflow: hidden;
}

scrollview > scroll-content {
    size: auto;
    min-size: 100%;
}

scrollview > scrollbar.horizontal {
    top: 1s;
}

scrollview > scrollbar.vertical {
    left: 1s;
}

.rtl scrollview > scrollbar.vertical {
    left: 0px;
}

/* SCROLLBAR */

scrollbar.horizontal {
    width: 1s;
    height: 8px;
}

scrollbar.vertical {
    width: 8px;
    height: 1s;
}

scrollbar .thumb {
    min-width: 4px;
    min-height: 4px;
}

scrollbar.horizontal .thumb {
    height: 1s;
}

scrollbar.vertical .thumb {
    width: 1s;
}

/* SLIDER */

slider {
    height: 16px;
    width: 1s;
    alignment: left;
    corner-radius: 50%;
}

slider.vertical {
    height: 1s;
    width: 16px;
    alignment: bottom-center;
}

slider .track {
    width: 1s;
    height: 4px;
    corner-radius: 50%;
    alignment: left;
}

slider.vertical .track {
    width: 4px;
    height: 1s;
    corner-radius: 50%;
    alignment: bottom-center;
}

slider .thumb {
    width: 16px;
    height: 16px;
}

/* SPINBOX */

spinbox {
    alignment: center;
    width: auto;
    height: auto;
}

spinbox.horizontal {
    layout-type: row;
    padding: 4px;
    gap: 4px;
}

spinbox.vertical {
    layout-type: column;
    padding: 4px;
    gap: 4px;
}

spinbox .spinbox-button {
    size: 24px;
    alignment: center;
}

spinbox .spinbox-button > svg {
    size: 20px;
}

spinbox .spinbox-value {
    width: 50px;
    min-width: 50px;
    height: 1s;
    alignment: center;
}

/* STACK */

zstack > * {
    position-type: absolute;
}

/* SWITCH */

switch {
    width: 30px;
    height: 18px;
}

switch .thumb {
    left: 1px;
    width: 16px;
    height: 16px;
    top: 1s;
    bottom: 1s;
    transition: left 100ms;
}

switch:checked .thumb {
    left: 13px;
    transition: left 100ms;
}

.rtl switch .thumb {
    left: 1s;
    right: 1px;
    transition: right 100ms;
}

.rtl switch:checked .thumb {
    left: 1s;
    right: 13px;
    transition: right 100ms;
}

/* TABVIEW */

tabview {
    width: 1s;
    height: 1s;
}

tabview > scrollview {
    width: 1s;
    height: auto;
}

tabview.vertical {
    layout-type: row;
}

tabview.vertical > scrollview.vertical {
    width: auto;
    height: 1s;
}

tabview > scrollview > scroll-content {
    layout-type: row;
}

tabview.vertical > scrollview.vertical > scroll-content {
    layout-type: column;
}
/* ... */

